fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -20,7 +20,7 @@ header {
 }
 
 h1 {
-  font-family: "Bevan", cursive;
+  font-family: "Bevan";
   color: #fff;
   text-align: center;
   margin: 0;
@@ -29,8 +29,8 @@ h1 {
 .nav {
   margin: 0;
   padding: 0;
-list-style-type: none;
-text-align: center;
+  list-style-type: none;
+  text-align: center;
 }
 
 .nav li {
@@ -46,7 +46,7 @@ text-align: center;
   padding: 0.75em;
   color: #fff;
   text-decoration: none;
-border-radius: 4px;
+  border-radius: 4px;
 }
 
 .nav a:hover {
